[gd_scene format=3 uid="uid://cwmmpaq8vmaru"]

[ext_resource type="Script" path="res://scripts/game/GameMain.gd" id="1_jo4p4"]
[ext_resource type="Script" path="res://scripts/ui/ResultPanel.gd" id="2_result"]

[node name="GameMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jo4p4")

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -200.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 0

[node name="LevelLabel" type="Label" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "关卡 01"
horizontal_alignment = 1

[node name="SettingsButton" type="Button" parent="Header"]
layout_mode = 2
text = "⚙"

[node name="ResultCardContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -300.0
offset_top = 60.0
offset_right = 300.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="ResultCard" type="Label" parent="ResultCardContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "结果节点"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StrengthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -300.0
offset_top = 130.0
offset_right = 300.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 0
max_value = 100.0
value = 0.0

[node name="StrengthLabel" type="Label" parent="StrengthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -12.0
offset_right = 50.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "0.0 / 0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChainArea" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -500.0
offset_top = 180.0
offset_right = 500.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 0

[node name="ChainSlots" type="HBoxContainer" parent="ChainArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CandidateArea" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -600.0
offset_top = -400.0
offset_right = 600.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="CandidateGrid" type="GridContainer" parent="CandidateArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="ActionButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ValidateButton" type="Button" parent="ActionButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "验证"

[node name="ClearButton" type="Button" parent="ActionButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "清空"

[node name="ResultPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_result")

[node name="VBox" type="VBoxContainer" parent="ResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="GradeLabel" type="Label" parent="ResultPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "S 级"
horizontal_alignment = 1

[node name="CompletenessBar" type="ProgressBar" parent="ResultPanel/VBox"]
layout_mode = 2
max_value = 100.0

[node name="StrengthBar" type="ProgressBar" parent="ResultPanel/VBox"]
layout_mode = 2
max_value = 100.0

[node name="CleanlinessBar" type="ProgressBar" parent="ResultPanel/VBox"]
layout_mode = 2
max_value = 100.0

[node name="CommentLabel" type="Label" parent="ResultPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "评语"
autowrap_mode = 2
horizontal_alignment = 1

[node name="UnlockLabel" type="Label" parent="ResultPanel/VBox"]
layout_mode = 2
text = ""

[node name="Buttons" type="HBoxContainer" parent="ResultPanel/VBox"]
layout_mode = 2
alignment = 1

[node name="NextButton" type="Button" parent="ResultPanel/VBox/Buttons"]
layout_mode = 2
text = "下一关"

[node name="RetryButton" type="Button" parent="ResultPanel/VBox/Buttons"]
layout_mode = 2
text = "重新挑战"
